--- a/dav_svn.conf
+++ b/dav_svn.conf
@@ -1,6 +1,8 @@
 LoadModule dav_svn_module /usr/lib/apache2/mod_dav_svn.so
 LoadModule authz_svn_module /usr/lib/apache2/mod_authz_svn.so
-
+<VirtualHost *:80>
+	ServerName localhost
+	DocumentRoot /home/svn/
 	<Location /svn>
 	     DAV svn
 	     SVNParentPath /home/svn
@@ -10,4 +12,4 @@ LoadModule authz_svn_module /usr/lib/apache2/mod_authz_svn.so
 	     AuthUserFile /etc/subversion/passwd
 	     Require valid-user
 	  </Location>
-	
+</VirtualHost>
